--- a/UCPCloud/starter/pom.xml
+++ b/UCPCloud/starter/pom.xml
@@ -113,6 +113,12 @@
             <artifactId>commons-net</artifactId>
             <version>3.1</version>
         </dependency>
+        <!--add by jackice on 20170906-->
+        <dependency>
+            <groupId>bouncycastle</groupId>
+            <artifactId>bcprov-jdk14</artifactId>
+            <version>140</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-dependencies</artifactId>
